moved base type definition to SlackTextObject and changed SlackBlockComposition to an interface

--- a/force-app/main/default/classes/domain/SlackBlockComposition.cls
+++ b/force-app/main/default/classes/domain/SlackBlockComposition.cls
@@ -1,20 +1,2 @@
-public abstract class SlackBlockComposition {
-    protected String type;
-
-    protected SlackBlockComposition(String type) {
-        this.type = type;
-    }
-
-    // Safe initialization - forces children to call parameterized constructor
-    private SlackBlockComposition() {
-        this(null);
-    }
-
-    public String getType() {
-        return type;
-    }
-
-    public void setType(String type) {
-        this.type = type;
-    }
-}
+// Should all abstract classes have an interface?
+public interface SlackBlockComposition {}
